src/components/MenuBars/MenuBars.scss
@import "constants/style.scss";

$tooltip-gap: 12px;
$menu-mobile__width: 72px;

.menu-bars-mobile {
  display: none;
  z-index: $menu-z-index;
  position: fixed;
  transition:
    bottom 0.25s,
    right 0.25s;
}

.menu-bars-mobile__options {
  list-style-type: none;
  display: flex;
  align-items: center;
  padding: 0;
  margin: 0;
  opacity: 0.25;

  &--vertical {
    flex-direction: column-reverse;
    justify-content: flex-start;
    grid-row: 1 / 2;
    grid-column: 2 / 3;
  }

  &--horizontal {
    flex-direction: row-reverse;
    justify-content: flex-start;
    grid-row: 2 / 3;
    grid-column: 1 / 2;
  }

  &--isExpanded,
  &--hasActiveButton {
    opacity: 1;
  }
}

.menu-bars-mobile__fab {
  background: $menu-icon-background-color--light;
  border-radius: $rounded--full;
  cursor: pointer;
  width: $menu-mobile__width;
  height: $menu-mobile__width;
  border: none;
  box-shadow: $box-shadow--light;
  z-index: $menu-item-z-index + $base-z-index-step;
  transition: all 0.2s ease-out;

  svg {
    width: $icon--medium;
    height: $icon--medium;
    path {
      fill: $color-black;
    }
  }
}

.menu-bars-mobile__fab-option {
  .tooltip-button__icon {
    border-radius: $rounded--full;
    margin: 0;

    &--active {
      background-color: $menu-icon-background-color--dark;
    }
  }

  &:nth-child(1) {
    z-index: $menu-item-z-index;
  }

  &:nth-child(1) {
    z-index: $menu-item-z-index - 1 * $base-z-index-step;
  }

  &:nth-child(2) {
    z-index: $menu-item-z-index - 2 * $base-z-index-step;
  }

  &:nth-child(3) {
    z-index: $menu-item-z-index - 3 * $base-z-index-step;
  }

  &--vertical:first-child {
    margin-bottom: $spacing--xs;
  }

  &--horizontal:first-child {
    margin-right: $spacing--xs;
  }
}

[theme="dark"] {
  .menu-bars-mobile__fab {
    background: $menu-icon-background-color--dark;
  }

  .menu-bars-mobile__fab-option .tooltip-button__icon {
    &--active {
      background-color: $color-white;
    }
  }
}

.menu-bars-mobile__fab-main {
  display: flex;
  justify-content: center;
  align-items: center;
  grid-row: 2 / 3;
  grid-column: 2 / 3;
}

.menu-bars-mobile__fab-main--isExpanded {
  background: $menu-icon-background-color--dark;

  svg {
    color: $color-white;
    width: $icon--huge;
    height: $icon--huge;
  }
}

[theme="dark"] {
  .menu-bars-mobile__fab svg path {
    fill: $color-white;
  }

  .menu-bars-mobile__fab-main--isExpanded {
    svg {
      color: $color-black;
    }
    background: $menu-icon-background-color--light;
  }
}

@media #{$smartphone} {
  $menu-mobile__width: 64px;

  .menu-bars {
    display: none;
  }

  .menu-bars-mobile {
    display: grid;
    grid-template-columns: 0 $menu-mobile__width;
    grid-template-rows: 0 $menu-mobile__width;
    bottom: $spacing--lg;
    right: $spacing--lg;
  }

  .menu-bars-mobile__fab {
    height: $menu-mobile__width;
    width: $menu-mobile__width;
  }
}

@media #{$mini-smartphone} {
  .menu-bars-mobile {
    bottom: 1vw;
    right: 1vw;
  }
}

.menu-bars {
  z-index: $menu-z-index;
  position: fixed;
  left: 50%;
  transform: translateX(-50%);
  bottom: $spacing--xs;
}

@media print {
  .menu-bars {
    display: none !important;
  }
}

.menu {
  z-index: $menu-z-index;
  border-radius: calc($menu-mobile__width / 2);
  background-color: $color-white;
  box-shadow: $box-shadow--light;
  padding-left: $spacing--lg;
  padding-right: $spacing--lg;
  height: $menu-mobile__width;
  width: auto;
  visibility: hidden;
  opacity: 0;
  position: absolute;
  bottom: 0;
}

.menu:first-child:last-child {
  position: static;
}

.user-menu {
  transform: translateY(-$menu-mobile__width);
}

.admin-menu {
  transform: translateY($menu-mobile__width);
}

.admin-menu.admin-menu--empty {
  background: none !important;
  box-shadow: none !important;
  margin: 0 !important;
  padding: 0 !important;
}

.menu__items {
  list-style-type: none;
  display: flex;
  align-items: center;
  flex-direction: row;
  gap: $spacing--base;
  height: 100%;
  padding: 0;
  margin: 0;
}

@media #{$tablet} {
  .menu-bars.menu-bars {
    position: static;
    transform: none;
    left: auto;
    bottom: auto;
  }
  .menu-bars .menu {
    padding: $spacing--lg 0;
    width: $action-bar__width;
    height: auto;
    position: fixed;
    top: 50%;
    transform: translateY(-50%);
    bottom: auto;
    visibility: visible;
    opacity: 1;
  }
  .menu-bars .user-menu {
    left: 10px;
  }
  .menu-bars .admin-menu {
    right: 10px;
  }
  .menu-bars .menu__items {
    flex-direction: column;
    height: auto;
  }
}

[theme="dark"] {
  .menu {
    background-color: $menu-icon-background-color--dark;
    box-shadow: $box-shadow--light;
  }
}

.menu-bars__navigation {
  display: none;
  position: absolute;
  top: calc(100% + 22px);
  left: 12px;
  right: 12px;

  width: 42px;
  height: 42px;

  background: $color-white;
  border: none;
  border-radius: 100%;
  outline: none;
  box-shadow: $box-shadow--light;
  color: $color-black;
}

.menu-bars__navigation.menu-bars__navigation--empty {
  top: 0;
}

.menu-bars__navigation:enabled {
  cursor: pointer;
}

.menu-bars__navigation:focus-visible {
  outline: 2px solid rgba($color-black, 0.5);
}

.menu-bars__navigation:enabled:hover {
  border: 3px solid #d3daf0;
}

.menu-bars__navigation:disabled {
  color: $color-light-gray;
}

[theme="dark"] {
  .menu-bars__navigation {
    background: $menu-icon-background-color--dark;
    color: $color-white;
  }

  .menu-bars__navigation:focus-visible {
    outline: 2px solid rgba($color-white, 0.5);
  }

  .menu-bars__navigation:enabled:hover {
    border: 3px solid #485064;
  }

  .menu-bars__navigation:disabled {
    color: $color-dark-mode--disabled;
  }
}

.menu-bars__navigation-icon {
  height: $icon--small;
  width: $icon--small;
}

@media #{$smartphone} {
  .menu-bars__navigation {
    display: none;
  }
}

@media #{$tablet} {
  .menu-bars__navigation.menu-bars__navigation--visible {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .menu:first-child:last-child {
    position: fixed;
  }
}

